# secure-coding-lab

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: README  env.py
migrations/versions/: 0001_initial_schema.py  0002_chat_room_participants.py  0003_admin_moderation.py
nginx/: default.conf
src/secure_coding_lab/: __init__.py  auth.py  config.py  db.py  main.py  models.py  moderation.py  product_images.py  security.py  web_security.py
src/secure_coding_lab/routers/: admin.py  auth.py  chats.py  health.py  pages.py  products.py  profile.py  reports.py  wallets.py
src/secure_coding_lab/static/css/: app.css
src/secure_coding_lab/templates/: admin_audit.html  admin_dashboard.html  admin_products.html  admin_reports.html  admin_users.html  base.html  chat_list.html  chat_not_found.html  chat_room.html  index.html  login.html  my_page.html  my_products.html  my_reports.html  product_detail.html  product_form.html  product_list.html  product_not_found.html  profile.html  profile_not_found.html  report_form.html  signup.html  wallet.html
tests/: conftest.py  test_admin.py  test_auth.py  test_chats.py  test_health.py  test_models.py  test_moderation.py  test_pages.py  test_products.py  test_profile.py  test_reports.py  test_security.py  test_transfers.py  test_wallets.py
