[project]
name = "secure-coding-lab"
version = "0.1.0"
description = "Secure secondhand marketplace built with FastAPI"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secure_coding_lab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
